--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="키워드1, 키워드2">
 	<meta property="og:image" content="https://artlecture.com/data/uploads/2025/2/20250219/397245e6c0ba3b42a8d1fc097dbade8b.jpg">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta http-equiv="refresh" content="0; URL='entrance.html'" />
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/6121/6121161.png">
 
